--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,18 @@
 @import url("styles/header.css");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+@import url("styles/banner.css");
 
 :root {
     --cor-de-fundo: #ebecee;
     --branco: #ffffff;
     --laranja: #eb9b00;
     --azul-degrade: linear-gradient(97.5deg, #002f52 35.49%, #326589 165.37%);
+    --fonte-principal: "Poppins", sans-serif;
 }
 
 body {
     background-color: var(--cor-de-fundo);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
