--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 @import url("styles/header.css");
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
 @import url("styles/banner.css");
+@import url("styles/carrossel.css");
+@import url("styles/topicos.css");
+@import url("styles/contato.css");
+@import url("styles/rodape.css");
 
 :root {
     --cor-de-fundo: #ebecee;
@@ -8,6 +12,7 @@
     --laranja: #eb9b00;
     --azul-degrade: linear-gradient(97.5deg, #002f52 35.49%, #326589 165.37%);
     --fonte-principal: "Poppins", sans-serif;
+    --azul: #002f52;
 }
 
 body {
