--- a/styles/header.css
+++ b/styles/header.css
@@ -27,11 +27,19 @@
 .lista-menu {
     display: none;
     position: absolute;
+    background-color: var(--branco);
+    z-index: -1;
+    opacity: 0;
+    transition: opacity 0.3s ease, z-index 0s 0.3s;
+    left: 0;
     top: 100%;
     width: 60vw;
 }
 
 .container__botao:checked~.lista-menu {
+    z-index: 10; 
+    opacity: 1;
+    transition: opacity 0.3s ease;
     display: block;
 }
 
