--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 @import url("styles/header.css");
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+@import url(@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:wght@300;400;500;700&display=swap');
 @import url("styles/banner.css");
 @import url("styles/carrossel.css");
 @import url("styles/topicos.css");
@@ -13,6 +13,8 @@
     --azul-degrade: linear-gradient(97.5deg, #002f52 35.49%, #326589 165.37%);
     --fonte-principal: "Poppins", sans-serif;
     --azul: #002f52;
+    --fonte-secundaria: "Josefin Sans", sans-serif;
+    --preto: #000000;
 }
 
 body {
