--- a/styles/banner.css
+++ b/styles/banner.css
@@ -8,7 +8,6 @@
 .banner__titulo {
     font-size: 18px;
     font-weight: 700;
-
 }
 
 .banner__texto {
@@ -32,5 +31,21 @@
     color: var(--branco);
     text-align: center;
     background: url("../img/lupa.svg") no-repeat;
-    background-position: 1em center;
+    background-position: 1em;
+}
+
+@media screen and (min-width: 1024px) {
+
+    .banner__titulo {
+        font-size: 36px;
+    }
+
+    .banner__pesquisa {
+        width: 40%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 12em;
+}
+
 }
