--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,9 @@
     --azul: #002f52;
     --fonte-secundaria: "Josefin Sans", sans-serif;
     --preto: #000000;
+    --cinza: #474646;
+    --cinza-claro: #858585;
+
 }
 
 body {
@@ -22,4 +25,4 @@ body {
     font-family: var(--fonte-principal);
     font-size: 16px;
     font-weight: 400;
-}
+} 
