--- a/styles/header.css
+++ b/styles/header.css
@@ -8,6 +8,14 @@
     cursor: pointer;
 }
 
+.container__botao:checked~.container__rotulo>.cabecalho__menu-hamburger {
+    background-image: url("../img/Menu Aberto.svg");
+}
+
+.container__botao:checked~.container__rotulo {
+    background: var(--azul-degrade);
+}
+
 .cabecalho {
     background-color: var(--branco);
     display: flex;
@@ -230,6 +238,19 @@
     
         .opcoes__botao:checked + label + .lista-menu {
             display: block;
+        }
+
+        /* .opcoes__botao:checked~.opcoes__rotulo>.opcoes__item {
+            background: var(--azul-degrade);
+        } */
+
+        .lista-menu__item:hover {
+            background: var(--azul-degrade);
+        }
+
+        .lista-menu__item:hover>.lista-menu__link {
+            -webkit-text-fill-color: var(--branco);
+            text-decoration: none;
         }
     }
 
